Trigger build again.